move pseudo border on link, so it can beshown/hidden on link states (to avoid overlap with focus outline)

--- a/scss/_patterns_tabs.scss
+++ b/scss/_patterns_tabs.scss
@@ -32,8 +32,6 @@
     }
 
     &__list {
-      @extend %vf-pseudo-border--bottom;
-
       display: flex;
       font-size: 0;
       margin: 0 auto $spv-outer--scaleable;
@@ -45,9 +43,6 @@
     }
 
     &__item {
-      @extend %vf-pseudo-border--bottom;
-
-      display: inline-block;
       float: none;
       font-size: 1rem;
       margin: 0;
@@ -60,8 +55,11 @@
     }
 
     &__link {
+      @include vf-focus;
+      @extend %vf-pseudo-border--bottom;
+
       color: $color-x-dark;
-      display: inline-block;
+      display: block;
       line-height: map-get($line-heights, default-text);
       padding: $spv-inner--medium $sph-inner;
 
@@ -75,6 +73,11 @@
       &:hover,
       &[aria-selected='true'] {
         @include vf-highlight-bar($color-tabs-active-bar, bottom, true);
+
+        &:focus::before,
+        &:focus::after {
+          content: none;
+        }
       }
     }
   }
